--- a/package.json
+++ b/package.json
@@ -63,11 +63,17 @@
   "devDependencies": {
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "typescript": "5.3.3",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/classnames": "^2.3.1",
+    "@types/chart.js": "^2.9.32"
   },
   "optionalDependencies": {
-    "eslint-plugin-flowtype": "8.0.3",
-    "typescript": "5.3.3"
+    "eslint-plugin-flowtype": "8.0.3"
   },
   "overrides": {
     "svgo": "3.0.2",
