--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "nouislider": "15.4.0",
     "react": "18.2.0",
     "react-chartjs-2": "2.11.2",
-    "react-copy-to-clipboard": "5.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-datetime": "3.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.21.1",
@@ -61,16 +61,17 @@
     "sass": "1.69.5"
   },
   "devDependencies": {
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.9",
-    "cross-env": "^7.0.3",
-    "typescript": "5.3.3",
+    "@types/chart.js": "^2.9.32",
+    "@types/classnames": "^2.3.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.1.7",
-    "@types/classnames": "^2.3.1",
-    "@types/chart.js": "^2.9.32"
+    "cross-env": "^7.0.3",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.9",
+    "typescript": "5.3.3"
   },
   "optionalDependencies": {
     "eslint-plugin-flowtype": "8.0.3"
